<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_photo"
            android:scaleType="centerCrop"
            android:src="@drawable/op2" />

        <TextView
            style="@style/TitleDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/intro_title" />

        <TextView
            style="@style/TextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_text" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/city_and_mountains"
            android:scaleType="centerCrop"
            android:src="@drawable/op4" />


        <TextView
            style="@style/TitleDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_title" />

        <ImageView
            style="@style/text_images"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/vila_rica"
            android:src="@drawable/vila_rica" />


        <TextView
            style="@style/TextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_text" />


        <ImageView
            style="@style/text_images"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/flag"
            android:src="@drawable/flag" />

        <ImageView
            style="@style/text_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/seal"
            android:src="@drawable/seal" />

        <TextView
            style="@style/TitleDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/culinary_title" />


        <TextView
            style="@style/TextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/culinary_text" />


        <ImageView
            style="@style/text_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/food_photo"
            android:scaleType="centerCrop"
            android:src="@drawable/culinaria" />


        <TextView
            style="@style/TitleDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/climate_title" />


        <TextView
            style="@style/TextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/climate_text" />

        <ImageView
            style="@style/text_images"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/map"
            android:src="@drawable/map" />

        <ImageView
            style="@style/text_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/church_and_mountains"
            android:scaleType="centerCrop"
            android:src="@drawable/op3" />

    </LinearLayout>

</ScrollView>